--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,9 +31,16 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+    lintOptions {
+        abortOnError false
+    }
 }
 
 dependencies {
+    // implementation lintPublish(project(":lintrules"))
+    implementation lintChecks(project(":lintrules"))
+
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.0'
     implementation 'com.google.android.material:material:1.4.0'
