--- a/lintrules/build.gradle
+++ b/lintrules/build.gradle
@@ -20,9 +20,10 @@ java {
 dependencies {
     compileOnly "com.android.tools.lint:lint-api:30.0.3"
     compileOnly "com.android.tools.lint:lint-checks:30.0.3"
-    compileOnly "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.6.0"
+    compileOnly "org.jetbrains.kotlin:kotlin-stdlib:1.6.0"
 
     testImplementation "com.android.tools.lint:lint:30.0.3"
+    testImplementation "org.jetbrains.kotlin:kotlin-reflect:1.6.0"
     testImplementation "com.android.tools.lint:lint-tests:30.0.3"
     testImplementation "junit:junit:4.13.2"
     testImplementation "org.assertj:assertj-core:3.9.0"
